# motility

./: .cvsignore  .gitignore  .svnignore  BUILD.txt  CMakeLists.txt  Makefile  README.txt  TODO
doc/: .cvsignore  Makefile  c++-interface.html  c++-interface.txt  index.html  index.txt  intro.html  intro.txt  motility-introduction.html  motility-introduction.txt  prototype.txt  python-interface.html  python-interface.txt  python-tutorial.html  python-tutorial.txt
doc/paper/: .gitignore  Makefile  motifpaper.tex
doc/paper/scripts/: Makefile  README  ib.py  im.py  it.py  it.time  pb.py  pm.py  pt.py  sb.py  sm.py  st.py
doc/paper/scripts/ORIGscripts/: mt.py  s.out  s.py  script.py  scriptbio.py  scriptmotility.py  scripttamo.py
doc/paper/scripts/OUTPUT/: all.time  ib.out  ib.time  im.out  im.time  it.out  it.time  mt.time  out.all  pb.time  pm.out  pm.time  pt.out  sb.out  sb.time  sm.out  sm.time  st.out  st.time
examples/: README.txt  bg_nt.py  search-file.py
lists/JASPAR/: README.txt  get-all-motifs.py  matrix_list.txt
lists/JASPAR/data/: MA0002.pfm  MA0109.pfm  MA0110.pfm
lists/TFD/: README.txt  TFD-prf-list.txt
lists/TFD/data/: 60k-protein.prf  AF-1.prf  AFP1.prf  ANF-1.prf  ANF-2.prf  ANF.prf  AP-1.prf  AP-2.prf  AP-3.prf  AP-4.prf  AP-5.prf  APF.prf  ARP-1.prf  ATBP1ATBP2.prf  ATF-CREB.prf  Adf-1.prf  AhR-XREbf.prf  Antp.prf  B1.prf  BPV-E2.prf  BSAP.prf  CAC-BF.prf  CAP.prf  CBF.prf  CBP-1.prf  CBP-CRF.prf  CD28RC.prf  CF1.prf  CF2-I.prf  CIIIB1.prf  COPYRIGHT  COUP.prf  CP1.prf  CP2.prf  CTF-NFI.2.prf  CTF.prf  DBP.prf  DISCLAIMER  E.prf  E1A-F.prf  (+219 more)
python/: .cvsignore  .svnignore  CMakeLists.txt  Makefile  _motilitymodule.cc  examples.py  parallel-work-in-progress.py  setup.py
python/motility/: .cvsignore  JASPAR.py  TFD.py  __init__.py  build.py  objects.py  op_en.py
python/motility/tests/: test-iupac-search.py
src/: .cvsignore  .svnignore  CMakeLists.txt  DnaSequence.cc  DnaSequence.hh  EnergyOperator.cc  EnergyOperator.hh  IupacMotif.cc  IupacMotif.hh  LiteralMotif.cc  LiteralMotif.hh  Makefile  Makefile.deps  Motif.hh  MotifMatch.hh  PwmMotif.cc  PwmMotif.hh  _MatrixMotif.cc  _MatrixMotif.hh  _MatrixRow.hh  motility.cc  motility.hh
swig/: Makefile  interface.cc  interface.hh  motility.i  motility_pl.i  motility_py.i
swig/perl/: .cvsignore  Makefile.PL  Makefile.bootstrap  test.pl
swig/python/: .svnignore  setup.py  test.py
tests/: .cvsignore  .svnignore  CMakeLists.txt  Makefile  __init__.py  _testdir.py  profile-iupac.cc  py-test-count.py  test-count.py  test-doctests.py  test-find-iupac.cc  test-find-literal.cc  test-find-op.cc  test-find-pwm.cc  test-python-interface.py  test-run-c++-programs.py  test-sequence.cc
